started breaking html files down into their resective routes and handlebars

--- a/product.html
+++ b/product.html
@@ -189,7 +189,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img class="main-img" id="hero-img" src="public/assets/img/sample-img.png">
+                <img class="main-img" id="hero-img" src="public/assets/img/dummy1.jpeg">
+                    
+                <a data-pin-do="buttonBookmark" href="https://www.pinterest.com/pin/create/button/">PINTEREST</a>
             </div>
 
             <!-- ADDITIONAL PRODUCT IMG -->
@@ -346,5 +348,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
+        <!-- PINTEREST SCRIPT -->
+        <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
     </body>
 </html>
